--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,10 @@ button[id^="cur"] {
     cursor: pointer;
 }
 
+button[id$="default"] {
+    background-color: rgba(200, 214, 229, 0.2);
+}
+
 button[id^="cur"]:hover {
     color: #FFFFFF;
 }
@@ -48,8 +52,23 @@ button[id^="cur"]:hover::after {
 
 .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.cursor-wrap {
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.cursor-label {
+    border: 3px solid #000000;
+    box-shadow: 0px 0px 5px #000000;
+    font-size: 32px;
+    color: #808E9B;
+    padding: 32px;
+    margin-top: 32px;
 }
